-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
# Internal Error (open/src/hotspot/share/oops/valueArrayOop.hpp:57), pid=19156, tid=19157
# assert(size_in_words <= (julong)max_jint) failed: no overflow
@SuppressWarnings("unchecked")
public class BugOpt3 {
public static void main(String[] args) {
BNode<Integer, Integer>[] table = new BNode[0x3fff_ffff];
}
/**
* Basic hash bin node.
*/
static inline class BNode<K,V> {
final K key;
final V value;
final int hash;
BNode(K key, V value) {
this.key = key;
this.value = value;
this.hash = 0;
}
}
}
# assert(size_in_words <= (julong)max_jint) failed: no overflow
@SuppressWarnings("unchecked")
public class BugOpt3 {
public static void main(String[] args) {
BNode<Integer, Integer>[] table = new BNode[0x3fff_ffff];
}
/**
* Basic hash bin node.
*/
static inline class BNode<K,V> {
final K key;
final V value;
final int hash;
BNode(K key, V value) {
this.key = key;
this.value = value;
this.hash = 0;
}
}
}
- clones
-
JDK-8232656 SEGV in very large arrays of inline classes
-
- Resolved
-
- relates to
-
JDK-8233189 [lworld] Flat array allocations are limited to 16 GB
-
- Open
-