8233130: [lworld] assert(size_in_words <= (julong)max_jint) failed: no overflow